Fix overflowing usernames.

--- a/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
+++ b/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
@@ -1,7 +1,7 @@
 @import url(https://discord-custom-covers.github.io/usrbg/dist/usrbg.css);
 
 :root {
-    --theme-version: "22.1.11b "
+    --theme-version: "22.1.12a "
 }
 
 [id^="ModernX Theme"] .bd-addon-header .bd-version:before {
@@ -894,6 +894,10 @@
     left: 50%;
     transform: translateX(-50%);
     height: auto
+}
+
+.title-338goq {
+    width: 6rem;
 }
 
 #app-mount .guilds-2JjMmN {
